--- a/css/default.css
+++ b/css/default.css
@@ -8,7 +8,7 @@
 body {
 	background: url(../img/bg.png);
 	font-family: source-code-pro, serif;
-	margin: 0;
+	margin: 0em;
 	padding: 5%;
 }
 
@@ -17,25 +17,23 @@ body {
 }
 
 #pic {
-	-webkit-box-shadow: 0 0 0.5em -0.25em black;
-	-moz-box-shadow: 0 0 0.5em -0.25em black;
-	box-shadow: 0 0 0.5em -0.25em black;
+	-webkit-box-shadow: 0em 0em 0.5em -0.25em black;
+	box-shadow: 0em 0em 0.5em -0.25em black;
 	background: rgba(255, 255, 255, 0.5);
 	-webkit-border-radius: 0.4em;
-	-moz-border-radius: 0.4em;
 	border-radius: 0.4em;
 	width: 100%;
 }
 
 #fill {
-	padding: 0.8em;
+	padding: 0.6em;
 }
 
 img {
 	-webkit-border-radius: 0.2em;
-	-moz-border-radius: 0.2em;
 	border-radius: 0.2em;
 	max-width: 100%;
+	display: block; /*to fix standards mode addition of pixels below*/
 }
 
 #links {
@@ -47,6 +45,7 @@ a {
 	text-align: center;
 	text-decoration: none;
 	width: 100%;
+	cursor: pointer;
 }
 
 a:hover article {
@@ -57,7 +56,6 @@ a:hover article {
 article {
 	background-color: rgba(110, 180, 96, 0.2);
 	-webkit-border-radius: 0.4em;
-	-moz-border-radius: 0.4em;
 	border-radius: 0.4em;
 	border: 0.1em solid rgba(110, 180, 96, 0.4);
 	color: #000;
@@ -67,7 +65,7 @@ article {
 
 @media all and (min-width: 480px) {
 	body {
-		padding: 0;
+		padding: 0px;
 	}
 
 	#content {
@@ -86,26 +84,8 @@ article {
 	}
 
 	#pic {
-		-webkit-box-shadow: 0 0 0.5em -0.25em black;
-		-moz-box-shadow: 0 0 0.5em -0.25em black;
-		box-shadow: 0 0 0.5em -0.25em black;
-		background: rgba(255, 255, 255, 0.5);
-		-webkit-border-radius: 6px;
-		-moz-border-radius: 6px;
-		border-radius: 6px;
 		height: 200px;
 		width: 200px;
-	}
-
-	#fill {
-		padding: 10px;
-	}
-
-	img {
-		-webkit-border-radius: 3px;
-		-moz-border-radius: 3px;
-		border-radius: 3px;
-		max-width: 100%;
 	}
 
 	#links {
@@ -116,67 +96,49 @@ article {
 
 	a {
 		clear: both;
-		cursor: pointer;
 		font-size: 20px;
-		text-decoration: none;
-		width: 100%;
+		display: block;
 	}
 
 	a:hover article {
-		-webkit-transform: perspective(300px) rotateX(180deg);
+		/*-webkit-transform: perspective(300px) rotateX(180deg);
 		-moz-transform: perspective(300px) rotateX(180deg);
-		-ms-transform: perspective(300px) rotateX(180deg);
 		-o-transform: perspective(300px) rotateX(180deg);
 		transform: perspective(300px) rotateX(180deg);
-		-webkit-transition: -webkit-transform 0.3s linear, background-color 0s linear 0.15s, color 0s linear 0.15s;
-		-moz-transition: -moz-transform 0.3s linear, background-color 0s linear 0.15s, color 0s linear 0.15s;
-		-o-transition: -o-transform 0.3s linear, background-color 0s linear 0.15s, color 0s linear 0.15s;
-		transition: transform 0.3s linear, background-color 0s linear 0.15s, color 0s linear 0.15s;
-		-webkit-border-radius: 4px;
-		-moz-border-radius: 4px;
-		border-radius: 4px;
+		-webkit-transition: -webkit-transform 0.3s linear 0s, background-color 0s linear 0.15s, color 0s linear 0.15s;
+		-moz-transition: -moz-transform 0.3s linear 0s, background-color 0s linear 0.15s, color 0s linear 0.15s;
+		-o-transition: -o-transform 0.3s linear 0s, background-color 0s linear 0.15s, color 0s linear 0.15s;
+		transition: transform 0.3s linear 0s, background-color 0s linear 0.15s, color 0s linear 0.15s;*/
 	}
 
 	article {
-		-webkit-transform: perspective(300px) rotateX(0deg);
+		/*-webkit-transform: perspective(300px) rotateX(0deg);
 		-moz-transform: perspective(300px) rotateX(0deg);
-		-ms-transform: perspective(300px) rotateX(0deg);
 		-o-transform: perspective(300px) rotateX(0deg);
 		transform: perspective(300px) rotateX(0deg);
-		-webkit-transition: -webkit-transform 0.3s linear, background-color 0.15s linear 0s, color 0s linear 0.15s;
-		-moz-transition: -moz-transform 0.3s linear, background-color 0.15s linear 0s, color 0s linear 0.15s;
-		-o-transition: -o-transform 0.3s linear, background-color 0.15s linear 0s, color 0s linear 0.15s;
-		transition: transform 0.3s linear, background-color 0.15s linear 0s, color 0s linear 0.15s;
+		-webkit-transition: -webkit-transform 0.3s linear 0s, background-color 0s linear 0.15s, color 0s linear 0.15s;
+		-moz-transition: -moz-transform 0.3s linear 0s, background-color 0s linear 0.15s, color 0s linear 0.15s;
+		-o-transition: -o-transform 0.3s linear 0s, background-color 0s linear 0.15s, color 0s linear 0.15s;
+		transition: transform 0.3s linear 0s, background-color 0s linear 0.15s, color 0s linear 0.15s;*/
 		background-color: rgba(110, 180, 96, 0);
-		-webkit-border-radius: 6px;
-		-moz-border-radius: 6px;
-		border-radius: 6px;
 		border: none;
-		color: #000;
 		height: 40px;
-		margin-top: 0;
-		padding: 0;
+		margin-top: 0px;
+		padding: 0px;
 		width: 100%;
 	}
 
 	a:hover span {
-		-webkit-transform: scale(1, -1);
+		/*-webkit-transform: scale(1, -1);
 		-moz-transform: scale(1, -1);
-		-ms-transform: scale(1, -1);
-		-o-transform: scale(1, -1);
-		transform: scale(1, -1);
-		-webkit-transition: scale(1, -1);
-		-moz-transition: scale(1, -1);
-		-o-transition: scale(1, -1);
-		transition: scale(1, -1);
-		text-shadow: 0 0 5px rgba(255, 255, 255, 0.6);
+		-o-transform: scale(1, -1);*/
+		text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
 	}
 
 	span {
-		-webkit-transition: -webkit-transform 0s linear 0.15s, text-shadow 0s linear 0.15s;
+		/*-webkit-transition: -webkit-transform 0s linear 0.15s, text-shadow 0s linear 0.15s;
 		-moz-transition: -moz-transform 0s linear 0.15s, text-shadow 0s linear 0.15s;
-		-o-transition: -o-transform 0s linear 0.15s, text-shadow 0s linear 0.15s;
-		transition: transform 0s linear 0.15s, text-shadow 0s linear 0.15s;
+		-o-transition: -o-transform 0s linear 0.15s, text-shadow 0s linear 0.15s;*/
 		float: left;
 		line-height: 40px;
 		padding: 0px 10px;
